# PIA-CLAUDE

./: .env.example  .gitignore  AGENTS.md  ANALYSIS_SUMMARY.txt  API_TEST_REPORT.md  AUTOMATION_API_REFERENCE.md  AUTOMATION_INTEGRATION_COMPLETE.txt  AUTOMATION_ORCHESTRATOR_SUMMARY.md  AUTOMATION_SETUP_GUIDE.md  BACKEND_INTEGRATION_ANALYSIS.md  CLAUDE.md  COMPLETE_DASHBOARD_SUMMARY.txt  CREDENTIALS_QUICK_REFERENCE.txt  DASHBOARD_IMPROVEMENTS_v3.md  DASHBOARD_QUICK_REFERENCE.md  DASHBOARD_REDESIGN_V2.md  DASHBOARD_UPDATES_SUMMARY.md  DASHBOARD_VISUAL_GUIDE.md  DELIVERY_SUMMARY.md  EMAIL_PROCESSING_REPORT.md  ENABLE_AUTOMATION_IN_ORCHESTRATOR.md  FINAL_RETEST_REPORT.md  FIX_TOKENS_NOW.md  FOUNDER_ANNOUNCEMENT_SENT.md  FRONTEND_FIX_REPORT.md  FULL_SYSTEM_SETUP_GUIDE.md  GET_LINKEDIN_TOKEN.md  GOLD_ARCHITECTURE.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_SUMMARY.txt  IMPLEMENTATION_UPDATE.txt  INTEGRATION_FIX_GUIDE.md  INTEGRATION_TEST_RESULTS.md  Implementation_Priority.md  LINKEDIN_AUTOMATION_COMPLETE.md  LINKEDIN_AUTOMATION_README.md  LINKEDIN_PLAYWRIGHT_SETUP.md  LINKEDIN_QUICKSTART.md  LINKEDIN_TWO_APPROACHES.md  LINKEDIN_URN_FIX.md  (+105 more)
.claude/: mcp.json
AI_Employee_Vault/: .gitignore  Business_Goals.md  Company_Handbook.md  Dashboard.md  Permissions.md  todo.md
AI_Employee_Vault/.ralph_state/: task_stuck_FILE_20260220_213151_EMAIL_20260220_213120_Awais__you_re_now_a_member_of_Empire_Of_Ai__-_tools.json
AI_Employee_Vault/Approved/: LINKEDIN_20260224_230806_zoya_launch.md  LINKEDIN_20260224_234750_launch.md  RALPH_20260223_131145_approval_backlog.md  RALPH_20260223_131145_stale_pending.md  RALPH_20260223_131145_stuck_in_progress.md  RALPH_20260223_132301_approval_backlog.md  RALPH_20260223_132301_stale_pending.md  RALPH_20260223_132301_stuck_in_progress.md  RALPH_20260223_133129_approval_backlog.md  RALPH_20260223_133129_stale_pending.md  RALPH_20260223_133129_stuck_in_progress.md  RALPH_20260223_133631_approval_backlog.md  RALPH_20260223_133631_stuck_in_progress.md  RALPH_20260223_143250_approval_backlog.md  RALPH_20260223_143250_stuck_in_progress.md  SEND_EMAIL_20260220_212036_Re__Invoice_Payment_-_Due_Date_Reminder.md  SEND_EMAIL_20260222_170940__Zoya_Test__Connectivity_Check___2026-02.md  SEND_EMAIL_20260222_171043__Zoya_Test__Connectivity_Check___2026-02.md  SEND_EMAIL_20260222_171050__Zoya_Test__Connectivity_Check___2026-02.md  SEND_EMAIL_20260222_184731__Zoya_Test__Connectivity_Check___2026-02.md  SEND_EMAIL_20260222_184831__Zoya_Test__Connectivity_Check___2026-02.md  SEND_EMAIL_20260222_194514__Zoya_Test__Connectivity_Check___2026-02.md  SEND_EMAIL_20260224_234750_fresh_launch.md  TWITTER_20260224_180414.md  (+7 more)
config/: credentials.example.json
docs/: LinkedIn_Automation_Strategy.md  Phase_2_Completion_Report.md  Phase_3_Gold_Completion_Report.md  WhatsApp_Integration_Analysis.md
linkedin_session/: state.json
scripts/: crontab.example  install_playwright.sh  live_status.sh  pm2-setup.sh  run_silver.sh  setup_gmail_auth.py  start_gold.sh  start_silver.sh  test_credentials.py
src/: __init__.py  audit_generator.py  audit_logger.py  briefing_generator.py  config.py  cross_domain_linker.py  cross_domain_orchestrator.py  error_recovery.py  linkedin_poster.py  log_janitor.py  mcp_config.json  orchestrator.py  playwright_utils.py  ralph_loop.py  ralph_wiggum.py  research_agent.py  social_media_daemon.py  source_normalizer.py  todo_manager.py  twitter_poster.py  utils.py  watcher.py
test_samples/: sample_invoice.md
tests/: conftest.py  test_base_watcher.py  test_briefing_generator.py  test_config.py  test_connectivity.py  test_content_generator.py  test_cross_domain.py  test_cross_domain_linker.py  test_gmail_watcher.py  test_hitl.py  test_linkedin_poster.py  test_mcp_email.py  test_orchestrator.py  test_plan_creator.py  test_ralph_loop.py  test_scheduler.py  test_utils.py  test_watcher.py  test_whatsapp_watcher.py
vault-control/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-frontend.js  vite.config.js
(+129 files in other folders)
