[project]
name = "zoya"
version = "0.1.0"
description = "Zoya - Personal AI Employee (Silver Tier)"
requires-python = ">=3.13"
dependencies = [
    "watchdog>=6.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "mcp>=1.26.0",
    "requests>=2.31.0",
]

[project.scripts]
zoya-watcher = "src.watcher:main"
zoya-orchestrator = "src.orchestrator:main"
zoya-gmail = "src.watchers.gmail_watcher:main"
zoya-linkedin = "src.linkedin_poster:main"
zoya-email-mcp = "src.mcp.email_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
